force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/EFPIO__OrchestrationEventSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to override concrete classes with custom implementations</description>
    <label>EFPIO - Orchestration Event Settings</label>
</CustomObject>