force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__CacheRepository_v1__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__CacheRepository_v1__c</fullName>
    <description>The fully qualified name of the cache repository to use during dependency injection which implements the globally visible ICacheRepository_v1 (Can have a custom implementation).</description>
    <label>Injectable Cache Repository v1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>