force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__CacheTTL__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__CacheTTL__c</fullName>
    <description>The cache TTL in seconds (Minimum 300, Maximum 172,800).</description>
    <label>Cache time-to-live</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>