force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__DataEncryptionProvider_v1__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__DataEncryptionProvider_v1__c</fullName>
    <description>The fully qualified class name of the data encryption provider to use.</description>
    <label>Data Encryption Provider Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>