force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__EncryptStateData__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__EncryptStateData__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the state data is encrypted or stored in plain text. Encryption is recommended.</description>
    <label>Encrypt State Data</label>
    <type>Checkbox</type>
</CustomField>