force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__EventLogMaxRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__EventLogMaxRetryAttempts__c</fullName>
    <description>The maximum amount of times to attempt to retry a DML interaction before erroring.</description>
    <label>Event Log Max Retry Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>