force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__EventRepository_v2__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__EventRepository_v2__c</fullName>
    <description>The fully qualified name of the event repository to use during dependency injection which implements the globally visible IEventRepository_v2 (Can have a custom implementation).</description>
    <label>Injectable Event Repository v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>