force-app/main/default/objects/EFPIO__OrchestrationEventSettings__c/fields/EFPIO__PlatformEventDefinition__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__PlatformEventDefinition__c</fullName>
    <description>If the concrete class for IEventRepository_v1 in use is leveraging Platform Events, enter the platform event definition name here to use (Can be a standard or high volume org partition.).</description>
    <label>Platform Event Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>